Fix first page horizontal scrollbar to only show a card per movie. Dynamically fill cards using movie image url stored in the db. Remove the table. Add csv files of different sizes for the same dataset. Fix some bugs

--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -12,10 +12,10 @@ footer{
   display: flex;
   justify-content: space-between;
   align-items: stretch;
-  /*flex-wrap: nowrap;*/
+  flex-wrap: nowrap;
   overflow-x: auto;
 
-  /*.card {
+  .card {
     flex: 0 0 auto;
-  }*/
+  }
 }
